--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,9 @@ const posts = (
   <head>
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-  <body class="font-inter">
+  <body class="font-inter dark:bg-gray-900">
     <Header />
-    <main class="m-auto max-w-4xl p-6">
+    <main class="m-auto max-w-4xl p-6 dark:text-white">
       <section class="mb-10 grid gap-4">
         <h2 class="text-xl font-bold">Hello, I'm Reona Shimada👋</h2>
         <p>
