--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -6,12 +6,15 @@ import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
 import type { HeaderItem } from "../components/Header.astro";
 
-export type Props = CollectionEntry<"posts">["data"] & { currentPage?: HeaderItem };
-const { title, description, pubDate, updatedDate, heroImage, currentPage } = Astro.props;
+export type Props = CollectionEntry<"posts">["data"] & {
+  currentPage?: HeaderItem;
+};
+const { title, description, pubDate, updatedDate, heroImage, currentPage } =
+  Astro.props;
 ---
 
 <BaseLayout title={title} description={description} currentPage={currentPage}>
-  <article class="prose max-w-none break-words">
+  <article class="prose max-w-none break-words dark:prose-invert">
     {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
     <FormattedDate date={pubDate} />
     <h1>{title}</h1>
