style: Change colors for menu

--- a/src/components/MenuIcon.astro
+++ b/src/components/MenuIcon.astro
@@ -16,21 +16,21 @@
 <div class="sm:hidden">
   <button
     id="menu"
-    class="grid h-5 w-10 items-center justify-center border-none bg-transparent focus:outline-none"
+    class="grid h-5 w-10 items-center justify-center bg-transparent"
     aria-label="メニュー"
   >
     <span
       id="upper-line"
-      class="h-0.5 w-6 origin-center bg-gray-800 transition-all duration-200 ease-out dark:bg-white"
+      class="h-0.5 w-6 origin-center bg-gray-800 transition-all ease-out dark:bg-white"
     ></span>
     <span
       id="lower-line"
-      class="h-0.5 w-6 origin-center bg-gray-800 transition-all duration-200 ease-out dark:bg-white"
+      class="h-0.5 w-6 origin-center bg-gray-800 transition-all ease-out dark:bg-white"
     ></span>
   </button>
   <div
     id="dialog"
-    class="absolute right-5 hidden rounded-lg bg-gray-50 p-6 shadow-lg dark:bg-slate-900 dark:text-white"
+    class="absolute right-5 hidden rounded-lg bg-gray-50 p-6 shadow-lg dark:bg-black dark:text-white"
   >
     <slot />
   </div>
