style: Modify background color of menu dialog

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const ariaCurrent: { "aria-current": "page" | undefined } = {
 };
 ---
 
-<header class="sticky top-0 bg-white dark:bg-gray-900 dark:text-white sm:static">
+<header class="sticky top-0 bg-white/75 dark:bg-gray-900/75 dark:text-white sm:static">
   <div class="m-auto flex max-w-4xl items-center justify-between p-6">
     <a href="/" class="text-xl">{SITE_TITLE}</a>
     <nav class="hidden sm:inline">
