--- a/src/components/MenuIcon.astro
+++ b/src/components/MenuIcon.astro
@@ -30,7 +30,7 @@
   </button>
   <div
     id="dialog"
-    class="absolute right-5 hidden rounded-lg bg-gray-50 p-6 shadow-lg dark:bg-black dark:text-white"
+    class="absolute right-5 hidden rounded-lg bg-gray-50/75 p-6 shadow-lg dark:bg-black/75 dark:text-white dark:shadow-gray-800"
   >
     <slot />
   </div>
