--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,18 +7,20 @@ const headerItems = [
   { name: "Posts", href: "/posts" },
   { name: "Drafts", href: "/drafts" },
 ] as const;
-export type HeaderItem = (typeof headerItems)[number]["name"];
+export type HeaderItem = typeof headerItems[number]["name"];
 export type Props = { currentPage?: HeaderItem };
 
 const { currentPage } = Astro.props;
-type Item = (typeof headerItems)[number]["name"];
+type Item = typeof headerItems[number]["name"];
 const isCurrentItem = (item: Item) => item === currentPage;
 const ariaCurrent: { "aria-current": "page" | undefined } = {
   "aria-current": "page",
 };
 ---
 
-<header class="sticky top-0 bg-white/75 dark:bg-gray-900/75 dark:text-white sm:static">
+<header
+  class="sticky top-0 bg-white/75 dark:bg-gray-900/75 dark:text-white sm:static"
+>
   <div class="m-auto flex max-w-4xl items-center justify-between p-6">
     <a href="/" class="text-xl">{SITE_TITLE}</a>
     <nav class="hidden sm:inline">
@@ -46,17 +48,17 @@ const ariaCurrent: { "aria-current": "page" | undefined } = {
       <nav class="inline">
         <ul class="grid items-end gap-3 text-lg">
           {
-          headerItems.map((item) => (
-            <li>
-              <a
-                href={item.href}
-                class={isCurrentItem(item.name) ? "underline" : undefined}
-                {...(isCurrentItem(item.name) && ariaCurrent)}
-              >
-                {item.name}
-              </a>
-            </li>
-          ))
+            headerItems.map((item) => (
+              <li>
+                <a
+                  href={item.href}
+                  class={isCurrentItem(item.name) ? "underline" : undefined}
+                  {...(isCurrentItem(item.name) && ariaCurrent)}
+                >
+                  {item.name}
+                </a>
+              </li>
+            ))
           }
         </ul>
       </nav>
