--- a/src/pages/drafts/[...slug].astro
+++ b/src/pages/drafts/[...slug].astro
@@ -3,11 +3,9 @@ import { getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
-  const posts = (
-    await getCollection("posts", ({ data }) => {
-      return data.draft === true;
-    })
-  )
+  const posts = await getCollection("posts", ({ data }) => {
+    return data.draft === true;
+  });
   return posts.map((post) => ({
     params: { slug: post.slug },
     props: post,
