--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -9,7 +9,7 @@ const { title, description } = Astro.props;
 
 <BaseLayout title={title} description={description} currentPage="About">
   <section class="prose max-w-none dark:prose-invert">
-    <Image src={aboutImage} alt="" width={850} height={478} class="pb-8" />
+    <Image src={aboutImage} alt="" width={850} height={478} loading="eager" class="pb-8" />
     <h1 class="dark:bg-gray-900 dark:text-white">{title}</h1>
     <p>
       <a href="/">reona.dev</a> は Astro + Vercel によって作成されています。<a
