--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -21,6 +21,14 @@ const { posts, isDraft } = Astro.props;
           >
             {post.data.title}
           </a>
+          <p class="text-sm truncate">{post.data.description}</p>
+          <div class="flex flex-wrap">
+            {post.data.tags.map((tag) => (
+              <p class="mr-1 my-1 rounded-md border bg-gray-50 p-1 text-sm dark:bg-black dark:text-white">
+                <a href={`/tags/${tag}`}>{tag}</a>
+              </p>
+            ))}
+          </div>
         </li>
       ))}
     </ol>
