--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import "@fontsource/inter";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
+import PostList from "../components/PostList.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from "../consts";
 import { getCollection } from "astro:content";
-import FormattedDate from "../components/FormattedDate.astro";
 
 const posts = (
   await getCollection("posts", ({ data }) => {
@@ -24,34 +24,13 @@ const posts = (
   <body class="font-inter dark:bg-gray-900">
     <Header />
     <main class="m-auto max-w-4xl p-6 dark:text-white">
-      <section class="mb-10 grid gap-4">
+      <section class="grid gap-4">
         <h2 class="text-xl font-bold">Hello, I'm Reona Shimada👋</h2>
         <p>
           プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
         </p>
-      </section>
-      <section class="grid gap-8">
-        {
-          posts.length !== 0 ? (
-            <>
-              <ol class="my-4 grid gap-8">
-                {posts.map((post) => (
-                  <li class="grid">
-                    <FormattedDate date={post.data.pubDate} />
-                    <a href={`/posts/${post.slug}/`} class="text-lg underline">
-                      {post.data.title}
-                    </a>
-                  </li>
-                ))}
-              </ol>
-              <a href="/posts" class="text-lg underline">
-                &gt;&gt; 記事一覧へ
-              </a>
-            </>
-          ) : (
-            <p class="text-xl">📝 記事はありません。</p>
-          )
-        }
+        <PostList posts={posts} isDraft={false} />
+        <a href="/posts" class="text-lg underline">&gt;&gt; 記事一覧へ</a>
       </section>
     </main>
     <Footer />
