refactor: Use import alias
refs: https://docs.astro.build/ja/guides/aliases/

--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
 import { Image } from "astro:assets";
-import aboutImage from "../assets/placeholder-about.jpg";
+import aboutImage from "@assets/placeholder-about.jpg";
 
 export type Props = { title: string; description: string };
 const { title, description } = Astro.props;
