--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
 import "@fontsource/inter";
-import BaseHead from "../components/BaseHead.astro";
-import Header, { HeaderItem } from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import BaseHead from "@components/BaseHead.astro";
+import Header, { HeaderItem } from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
 import { SITE_LANGUAGE } from "../consts";
 
 export type Props = {
