--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/About.astro";
+import Layout from "@layouts/About.astro";
 import { SITE_DESCRIPTION } from "../consts";
 ---
 
