--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,10 +1,10 @@
 ---
 import "@fontsource/fira-code";
 import BaseLayout from "./BaseLayout.astro";
-import FormattedDate from "../components/FormattedDate.astro";
+import FormattedDate from "@components/FormattedDate.astro";
 import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
-import type { HeaderItem } from "../components/Header.astro";
+import type { HeaderItem } from "@components/Header.astro";
 
 export type Props = CollectionEntry<"posts">["data"] & {
   currentPage?: HeaderItem;
