--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import "@fontsource/inter";
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import PostList from "../components/PostList.astro";
-import Footer from "../components/Footer.astro";
+import BaseHead from "@components/BaseHead.astro";
+import Header from "@components/Header.astro";
+import PostList from "@components/PostList.astro";
+import Footer from "@components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from "../consts";
 import { getCollection } from "astro:content";
 
