--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import PostList from "../../components/PostList.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
+import PostList from "@components/PostList.astro";
 import { getCollection } from "astro:content";
 
 const posts = (
