--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,7 @@
 ---
 import "@fontsource/inter";
-import BaseHead from "@components/BaseHead.astro";
-import Header from "@components/Header.astro";
+import BaseLayout from "@layouts/BaseLayout.astro";
 import PostList from "@components/PostList.astro";
-import Footer from "@components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION, SITE_LANGUAGE } from "../consts";
 import { getCollection } from "astro:content";
 
@@ -18,21 +16,14 @@ const posts = (
 
 <!DOCTYPE html>
 <html lang={SITE_LANGUAGE}>
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-  </head>
-  <body class="font-inter dark:bg-gray-900">
-    <Header />
-    <main class="m-auto max-w-4xl p-6 dark:text-white">
-      <section class="grid gap-4">
-        <h2 class="text-xl font-bold">Hello, I'm Reona Shimada👋</h2>
-        <p>
-          プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
-        </p>
-        <PostList posts={posts} isDraft={false} />
-        <a href="/posts" class="text-lg underline">&gt;&gt; 記事一覧へ</a>
-      </section>
-    </main>
-    <Footer />
-  </body>
+  <BaseLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+    <section class="grid gap-4">
+      <h2 class="text-xl font-bold">Hello, I'm Reona Shimada👋</h2>
+      <p>
+        プログラミングに関する学びや日々の出来事を発信するウェブサイトです。
+      </p>
+      <PostList posts={posts} isDraft={false} />
+      <a href="/posts" class="text-lg underline">&gt;&gt; 記事一覧へ</a>
+    </section>
+  </BaseLayout>
 </html>
