feat: Enable to see tags on post pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ const today = new Date();
 
 <footer>
   <div
-    class="m-auto flex max-w-4xl justify-between bg-white p-6 dark:bg-gray-900 dark:text-white transition ease-in-out"
+    class="m-auto flex max-w-4xl justify-between bg-white p-6 transition ease-in-out dark:bg-gray-900 dark:text-white"
   >
     <span>
       &copy; {today.getFullYear()} Reona Shimada.
