--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ const { title, description, currentPage } = Astro.props;
   </head>
 
   <body
-    class="font-inter dark:bg-gray-900 dark:text-white transition ease-in-out"
+    class="font-inter transition ease-in-out dark:bg-gray-900 dark:text-white"
   >
     <Header currentPage={currentPage} />
     <main class="m-auto max-w-4xl p-6">
