--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,6 +1,7 @@
 ---
 import "@fontsource/fira-code";
 import BaseLayout from "./BaseLayout.astro";
+import TagList from "@components/TagList.astro";
 import FormattedDate from "@components/FormattedDate.astro";
 import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
@@ -9,7 +10,7 @@ import type { HeaderItem } from "@components/Header.astro";
 export type Props = CollectionEntry<"posts">["data"] & {
   currentPage?: HeaderItem;
 };
-const { title, description, pubDate, updatedDate, heroImage, currentPage } =
+const { title, description, pubDate, tags, heroImage, currentPage } =
   Astro.props;
 ---
 
@@ -18,13 +19,7 @@ const { title, description, pubDate, updatedDate, heroImage, currentPage } =
     {heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
     <FormattedDate date={pubDate} />
     <h1>{title}</h1>
-    {
-      updatedDate && (
-        <p>
-          Last updated on <FormattedDate date={updatedDate} />
-        </p>
-      )
-    }
+    <TagList tags={tags} />
     <hr />
     <slot />
   </article>
