fix: Fix a post title and style a bit

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -20,7 +20,7 @@ const { title, description, pubDate, tags, heroImage, currentPage } =
     <FormattedDate date={pubDate} />
     <h1>{title}</h1>
     <TagList tags={tags} />
-    <hr />
+    <hr class="mt-4" />
     <slot />
   </article>
 </BaseLayout>
