--- a/next-contentlayer/app/globals.css
+++ b/next-contentlayer/app/globals.css
@@ -1,3 +1,73 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+div[data-rehype-pretty-code-fragment] {
+  overflow: hidden;
+
+  /* stylist preferences */
+  background-color: #1f2937;
+  border-radius: 0.5rem;
+}
+
+div[data-rehype-pretty-code-fragment] pre {
+  overflow-x: auto;
+
+  /* stylist preferences */
+  margin: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+
+div[data-rehype-pretty-code-title] {
+  /* stylistic preferences */
+  margin-bottom: 0.125rem;
+  border-radius: 0.375rem;
+  background-color: rgb(255 228 230 / 0.1);
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  color: #C9D1D9;
+}
+
+div[data-rehype-pretty-code-fragment] .line {
+  /* stylistic preferences */
+  padding-left: 0.5rem;
+  padding-right: 0.75rem;
+
+  border-left-width: 4px;
+  border-left-color: transparent;
+}
+
+
+div[data-rehype-pretty-code-fragment] .line--highlighted {
+  border-left-color: rgb(253 164 175 / 0.7);
+  background-color: rgb(254 205 211 / 0.1);
+}
+
+div[data-rehype-pretty-code-fragment] code {
+  display: grid;
+}
+
+code[data-line-numbers] {
+  counter-reset: lineNumber;
+}
+
+code[data-line-numbers] .line::before {
+  counter-increment: lineNumber;
+  content: counter(lineNumber);
+  display: inline-block;
+  text-align: right;
+
+  /* stylistic preferences */
+  margin-right: 0.75rem;
+  width: 1rem;
+  color: rgb(255 255 255 / 0.2);
+}
