--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -8,7 +8,7 @@ const { tags } = Astro.props;
 <div class="flex flex-wrap">
   {
     tags.map((tag) => (
-      <p class="my-1 mr-1 rounded-md border bg-gray-50 p-1 text-sm dark:bg-black dark:text-white">
+      <p class="my-1 mr-1 rounded-md border bg-gray-50 p-1 text-sm dark:bg-black">
         <a href={`/tags/${tag}`}>{tag}</a>
       </p>
     ))
