--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @apply bg-white transition-colors ease-out dark:bg-gray-900 dark:text-white;
+  @apply bg-white text-gray-700 transition-colors ease-out dark:bg-gray-900 dark:text-gray-300;
 }
 
 h1,
@@ -17,6 +17,10 @@ h4,
 h5,
 h6 {
   @apply scroll-mt-20 sm:scroll-mt-0;
+}
+
+a:hover {
+  @apply text-black dark:text-white
 }
 
 div[data-rehype-pretty-code-fragment] {
