style: 色調と各要素の間隔を変更

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ h6 {
 }
 
 a:hover {
-  @apply text-black dark:text-white
+  @apply text-black dark:text-white;
 }
 
 div[data-rehype-pretty-code-fragment] {
