--- a/app/globals.css
+++ b/app/globals.css
@@ -39,17 +39,17 @@ div[data-rehype-pretty-code-fragment] pre {
   padding-bottom: 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5rem;
+  border-radius: 0 0 4px 4px;
 }
 
 div[data-rehype-pretty-code-title] {
   /* stylistic preferences */
-  margin-bottom: 0.125rem;
-  border-radius: 0.375rem;
-  background-color: rgb(255 228 230 / 0.1);
+  border-radius: 4px 4px 0 0;
+  background-color: rgb(50 50 50 / 0.9);
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  padding-bottom: 0.15rem;
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   font-size: 0.75rem;
@@ -67,8 +67,8 @@ div[data-rehype-pretty-code-fragment] .line {
 }
 
 div[data-rehype-pretty-code-fragment] .line--highlighted {
-  border-left-color: rgb(253 164 175 / 0.7);
-  background-color: rgb(254 205 211 / 0.1);
+  border-left-color: rgb(104 168 255 / 0.7);
+  background-color: rgb(204 205 235 / 0.1);
 }
 
 div[data-rehype-pretty-code-fragment] code {
